Bug 146095 - Animation speed on presentation mode slow Skia Raster
Summary: Animation speed on presentation mode slow Skia Raster
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.1.0.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0
Keywords:
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2021-12-07 13:46 UTC by Telesto
Modified: 2021-12-10 11:00 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Bibisect log (3.21 KB, text/plain)
2021-12-07 13:48 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2021-12-07 13:46:11 UTC
Description:
Animation speed on presentation mode slow

Steps to Reproduce:
1. Open attachment 176759 [details]
2. Take a look at the speed of the animation in slide mode
3. Press F5 (notice everything slows down)

Actual Results:
Slow animations

Expected Results:
Regular speed


Reproducible: Always


User Profile Reset: No



Additional Info:
Presentation mode doesn't work with 7.4

Slow with
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 47331ae6f95070ff7460e541895895b59eb15103
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL

fine with
7.0
Comment 1 Telesto 2021-12-07 13:48:43 UTC
Created attachment 176763 [details]
Bibisect log

Initial slowdown started with
author	Luboš Luňák <l.lunak@collabora.com>	2020-09-05 07:05:16 +0200
committer	Luboš Luňák <l.lunak@collabora.com>	2020-09-07 15:19:32 +0200
commit 717ce6838b7ef0add1f9a9655e2b8c0bf60203f0 (patch)
tree 0b887e4a06120dea3fff1788a337365d427441e8
parent 23762a704133051184850fc711e44bc9a112f59a (diff)
avoid temporary SkImage when merging bitmaps in Skia (tdf#136244)
The original idea was to create a temporary SkImage in order to first
merge the bitmap and its alpha bitmap, otherwise scaling already
while merging them could introduce artefacts because of smoothscaling
the alpha. But SkShader use blends the bitmap and alpha values
before the scaling, so this is actually not necessary.

There might be a second commit making this even worse.. it's really really bad in 7.3
Comment 2 Telesto 2021-12-07 13:51:03 UTC
Presentation mode to launch since 2021-10-11 (bug 146094)
Comment 3 Telesto 2021-12-07 13:51:45 UTC
Adding CC: to Luboš Luňák
Comment 4 Luboš Luňák 2021-12-08 18:06:17 UTC
It's actually fine if the Skia image cache size is increased in expert settings. What happens is that the animated frames (both in the presentation and in the edit mode, since they both run) create so much data in one loop that it overflows the default 64MiB cache.
Comment 5 Commit Notification 2021-12-10 11:00:42 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2c86b79e87bc8579f5213708954d5c85fe231407

cache Skia drawing based on checksum of bitmap content (tdf#146095)

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.